# wtquic

./: .gitignore  CMakeLists.txt  CMakePresets.json  COMPATIBILITY.md  LICENSE  README.md
.github/workflows/: ci.yml
backends/msquic/: CMakeLists.txt  msq_client.c  msq_conn.c  msq_env.c  msq_internal.h  msq_listener.c  msq_settings.c  msq_stream.c
backends/network/: CMakeLists.txt  nw_conn.c  nw_internal.h  nw_send_holder.m
backends/network_experimental/: CMakeLists.txt  README.md  nw_probe.c  raw_peer.c  raw_peer.h  send_sentinel.h  send_sentinel.m
backends/picoquic/: CMakeLists.txt
benchmarks/: CMakeLists.txt  bench_proto.c
cmake/: FindMsQuic.cmake  WtqPcPrefix.cmake  wtquic-msquic.pc.in  wtquic-network.pc.in  wtquic.pc.in  wtquicConfig.cmake.in
examples/: wt_echo_client.c  wt_echo_server.c
fuzz/: CMakeLists.txt  fuzz_api_soup.c  fuzz_capsule.c  fuzz_connect.c  fuzz_engine_connect.c  fuzz_engine_control.c  fuzz_h3_frame.c  fuzz_h3_settings.c  fuzz_preamble.c  fuzz_qpack_static.c  fuzz_sf_string.c  fuzz_varint.c  wtq_fuzz_util.h
include/wtquic/: error.h  export.h  session.h  stream.h  types.h  version.h.in  wtquic.h  wtquic_msquic.h  wtquic_network.h
scripts/: check_api_boundary.sh  check_ios_slices.sh  check_no_backend_leak.sh  gen_qpack_tables.py  gen_test_certs.sh
src/: types.c
src/api/: api_internal.h  session.c
src/engine/: conn.c  wt_driver.h
src/proto/: capsule.c  capsule.h  connect.c  connect.h  errmap.c  h3_err.h  h3_frame.c  h3_frame.h  h3_settings.c  h3_settings.h  preamble.c  preamble.h  qpack_static.c  qpack_static.h  qpack_tables.inc  sf_string.c  sf_string.h  varint.c  varint.h
tests/: CMakeLists.txt
tests/cmake/: check_wtq_msquic_symbols.cmake  check_wtq_network_symbols.cmake  check_wtq_symbols.cmake  consumer_embed_network.cmake  consumer_install_msquic.cmake  consumer_install_network.cmake
tests/conformance/: wtq_scenarios.c
tests/consumer/: consumer_header.c  consumer_header.cpp  consumer_msquic_header.c  consumer_msquic_header.cpp
tests/consumer/embed_full/: CMakeLists.txt  main.c
tests/consumer/msquic_pkg/: CMakeLists.txt  main.c
tests/consumer/network_header/: use_header.c  use_header.cpp
tests/consumer/network_pkg/: CMakeLists.txt  main.c  main.cpp
tests/fault/: wtq_fault_scenarios.c
tests/loopback/: loopback_env_close.c  loopback_msquic.c
tests/msquic/: msquic_accept.c  msquic_env.c  msquic_managed.c  msquic_ops.c
tests/network/: repro_nw_stream_teardown.c  test_nw_create_thread.c  test_nw_lifecycle.c  test_nw_loopback.c  test_nw_send_matrix.c
tests/network/support/: raw_peer.c  raw_peer.h
tests/oom/: wtq_oom_scenarios.c
tests/support/: fake_driver.c  fake_driver.h  wt15_vectors.c  wt15_vectors.h  wtq_apipair.c  wtq_apipair.h  wtq_fault_alloc.c  wtq_fault_alloc.h  wtq_scenario.c  wtq_scenario.h  wtq_simpair.c  wtq_simpair.h
tests/unit/: test_api_abort.c  test_api_async_id.c  test_api_pair.c  test_api_pause.c  test_api_session.c  test_api_stream.c  test_api_transport_error.c  test_capsule.c  test_connect.c  test_engine_async_id.c  test_engine_bootstrap.c  test_engine_connect.c  test_engine_dgram.c  test_engine_profile.c  test_engine_session.c  test_engine_shutdown.c  test_engine_wtstream.c  test_errcode_map.c  test_h3_frame.c  test_h3_settings.c  test_preamble.c  test_profile_parsers.c  test_qpack_static.c  test_sf_string.c  test_simpair_bootstrap.c  test_support.h  test_truncation.c  test_varint.c  test_vectors_wt15.c  test_version.c
tests/vectors/wt15/: manifest.json
